# domobot

./: README  README.md
Vocal/c++/: Makefile  PocketVoice.cpp  PocketVoice.h  test.cpp  vim.gram
Vocal/google/: googleRetrieve.sh  out.flac  pyAskGoogle.py  recordSend.py
Vocal/java/: commands.json
Vocal/labo_c/class/: PocketVoice.cpp  main.cpp  rawCommands.c  voiceCommands
Vocal/labo_c/test/: build.sh  config.es  hello.gram  oldCommands.gram
Vocal/tts/: RequestHandler.py  googleTTS.py  parole.sh
client/Java/: Client.java  Connection.java  DistributedClient.java  DistributedStream.java  Emission.java  Reception.java  command.json
client/SerialCom/: btcomm.py  rfcomm.py
client/TUIO_MouseObject/: README.txt
client/TUIO_MouseObject/source/: TuioMouse.java  TuioMouse.java~  TuioTouchpad.java  TuioTouchpad.java~  compile.sh
client/glClient/: CMakeLists.txt  GlutManager.cpp  GlutManager.h  glKinectClient.cpp  networkHandler.h  preClass.cpp  protoMain.cpp
client/graphic/3dRender/: CMakeLists.txt  Mesh.cpp  Mesh.h  glfwMain.cpp  glutMain.cpp
deprecated/: XnCommunication.cpp  XnCommunication.h  main.cpp
deprecated/Processing/ImprovedTuio/: ImprovedTuio.pde
kinect/: CMakeLists.txt  KinectTuio  main.cpp
kinect/data/: Sample-Tracking.xml  config.json
kinect/lib/: HandTracker.cpp  HandTracker.h  XEventsEmulation.cpp  XEventsEmulation.h  XnCommunication.cpp  XnCommunication.h  mouse.cpp
kinect/motor/: Utils.py  kinectMotor.py
kinect/pySVM/: ClassifierSVC.py  ClassifierSVM.py  NaiveBayes.py  SVCmodel.data  SVCmodel.data_01.npy  SVCmodel.data_02.npy  SVCmodel.data_04.npy  SVCmodel.data_05.npy  SVCmodel.data_06.npy  SVMData.txt  SVMTest.txt  SVMTrain.txt  SVMTrain.txt.old  blobServerSVC.py  fingerSVC.py  predict.data  system
kinect/pySVM/test/: nonLinearSVC.py  plotLinearSVC.py  pyBridge.cpp  pyBuild.sh  pyThreadBridge.cpp  system.cpp  testKernelSVM.py
kinect/socketComm/: cppServer.cpp
lights/: makefile  stalker_pde.pde
lights/comm/: bt_comm.py  btcomm.py  test_plot.py
lights/prototype/: Arduino.mk  Makefile  stalker_pde.ino
lights/prototype/build-cli/: blink.elf  blink.hex  depends.mk  stalker_pde.cpp
lights/prototype/c_src/: compile.sh  simpleStalkerIno.cpp
lights/test/: testSwitch.ino
lights/tmp/: Makefile  btcomm.py  simpleStalkerIno.ino
lights/v1.0/: lightProto-v1-0.ino
lights/v1.2/: Arduino.mk  Makefile  demo.ino
lights/v1.2/build-cli/: demo.cpp  depends.mk  v1.2.elf  v1.2.hex
lights/v1.2/tmp/: switchBT.ino
monitor/: ProcessInfo.py  ProcessStatistics.py  monitor.py
monitor/f_timer/: Profiler.h  chrono  main.cpp
server/btConnection/: BluetoothPort.java  BluetoothTargetHandler.java  BluetoothThread.java  Makefile
server/ipConnection/: Authentification.java  ConnectionHandler.java  DistributedExchange.java  DistributedServer.java  Emission.java  Makefile  ProcessThread.java  Reception.backup  Reception.java  Server.java  ShellProcess.java  identity.txt
socketComm/: pyServer.py
utils/socketComm/: cppClient.cpp  pyClient.py
vocal/: googleTTS.py~  reco.py
vocal/c++/: Makefile  VocalManager.cpp  commands.gram  commands.json  config.es  test  utils.h
vocal/google/: recordSend.py
vocal/java/: build.xml
vocal/labo_c/class/: PocketVoice.h  build.sh  commands.gram  main
vocal/labo_c/test/: digits-es-4.gram  hello_ps.c  voiceCommands  voiceCommands.c
vocal/recognition/: build.sh  hello_ps  hello_ps.c
vocal/tts/: cmd.txt  googleTTS.py
(+41 files in other folders)
